Shang New Live/src/objects/LOI_Charges__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Charge_Type__c</fullName>
        <inlineHelpText>Pls select Base Charge Type if the bill is based on other Charge Type. (eg. for GTO and A&amp;P, select Base Charge Type as Advance Rental).</inlineHelpText>
        <label>Base Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Base_Charge_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Rent_Calculation_Foreign__c</fullName>
        <label>Base Rent Calculation (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Rent_Calculation_Local__c</fullName>
        <label>Base Rent Calculation (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Rent_Calculation__c</fullName>
        <description>This field is referred in Rent Schedule - &quot;Calculated Amount&quot; for Amount Calculation
**Do not delete**</description>
        <formula>IF
(
	AND (
	OR(
	ISPICKVAL ( Charge_Type__c , &quot;Rent&quot;) ,
	ISPICKVAL ( Charge_Type__c , &quot;Advance Rental&quot;) ) ,
	 ISPICKVAL(Type__c, &quot;Fixed&quot;)),
	Charge_Rate__c ,
	IF
(
	AND (
	OR(
	ISPICKVAL ( Charge_Type__c , &quot;Rent&quot;) ,
	ISPICKVAL ( Charge_Type__c , &quot;Advance Rental&quot;) ) ,
	 ISPICKVAL(Type__c, &quot;By Area&quot;)),
	Charge_Rate__c * LOI_Unit__r.Area_Sq_Ft__c,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Rent Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Rent__c</fullName>
        <label>Base Rent (do not delete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Value_Foreign__c</fullName>
        <label>Base Value (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Value_Local__c</fullName>
        <label>Base Value (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Value__c</fullName>
        <label>Base Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Days__c</fullName>
        <inlineHelpText>Please select &quot;31&quot; if you want to set the billing date at the end of the month.</inlineHelpText>
        <label>Billing Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <description>This field is used to create monthly Rent Schedule records via trigger
Value has been defaulted to Monthly via trigger and hidden from layout.</description>
        <label>Rent Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <inlineHelpText>Prorate (1st and last month) 
Non-prorate (full month)</inlineHelpText>
        <label>Billing Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cap_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cap_Value__c</fullName>
        <description>Created to managed GTO Cap Cases. This value will be pushed to all related RS on reord creation. Will be referred in formulas to calculate GTO Amount (in respective RS records)</description>
        <label>Cap Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Amount Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Description__c</fullName>
        <label>Charge Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charge_Operator__c</fullName>
        <description>Sum : Amount + Caculated Field
Multiple : Amount x Parameter
Highest : Highest of either Amount or Calculated Field
Special Formula: Excecute Defined special Formula (e.g. aggregate GTO calculation for different products)
Lowest : Lowest of either Amount or Calculated Field</description>
        <inlineHelpText>Sum : Amount + Caculated Field
Multiple : Amount x Parameter
Highest : Highest of either Amount or Calculated Field
Special Formula: Excecute Defined special Formula (e.g. aggregate GTO calculation 
Lowest : Lowest of either Amount or Calculated Field</inlineHelpText>
        <label>Charge Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Highest</fullName>
                </value>
                <value>
                    <fullName>Lowest</fullName>
                </value>
                <value>
                    <fullName>Special Formula</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Rate_Input_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Rate Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Rate__c</fullName>
        <inlineHelpText>Rate is either Percentage, for Charge Types By Percent, Value multiplier for Types By Area, or a Fixed Cost for Types Fixed and GTO Percent for GTO Types.</inlineHelpText>
        <label>Charge Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Start_Day__c</fullName>
        <label>Charge Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Charge</label>
        <referenceTo>Applicable_Charges__c</referenceTo>
        <relationshipLabel>LOI Charges</relationshipLabel>
        <relationshipName>LOI_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Tax_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comm Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cumulative_for_each_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Cumulative we will calculate the Total at each Tier &amp; Summarize them</description>
        <inlineHelpText>If Cumulative we will calculate the Total at each Tier &amp; Summarize them.
Example 
If the Maximum Tier is Tier 2,
If Cumulative:
      Tier 1 Total + Tier 2 Total
If NOT Cumulative:
      Tier 2 Total
      Which</inlineHelpText>
        <label>Cumulative for each Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cumulative_for_each_Tier_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Cumulative we will calculate the Total at each Tier &amp; Summarize them</description>
        <inlineHelpText>If Cumulative we will calculate the Total at each Tier &amp; Summarize them.
Example 
If the Maximum Tier is Tier 2,
If Cumulative:
      Tier 1 Total + Tier 2 Total
If NOT Cumulative:
      Tier 2 Total
      Which</inlineHelpText>
        <label>Cumulative for each Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <formula>IF ( ISPICKVAL( Type__c , &quot;By Area&quot;),  (Charge_Rate__c *  LOI_Unit__r.Area_Sq_Ft__c) *  No_of_Months__c  ,
IF ( ISPICKVAL( Type__c , &quot;Fixed&quot;), Charge_Rate__c,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be used to calculate Deposit Amount
Used in Deposit creation process</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Term__c</fullName>
        <description>No of months for deposit</description>
        <label>Deposit Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Month_Formula__c</fullName>
        <inlineHelpText>This is to set up billing date for rent schedule.
(eg. -1: 1 month before rent month; 0: same month as rent month, 1: 1 month after rent month)</inlineHelpText>
        <label>Due Month Formula</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Due_Month_Formula</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <description>*Need to check if this is used anywhere*
Does Not appear on Layout</description>
        <label>Expected Amount (to be deleted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_GTO_Amount__c</fullName>
        <label>Expected GTO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_GTO__c</fullName>
        <label>Expected GTO (to be deleted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Accounts_Code__c</fullName>
        <label>Finance Accounts Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Accounts_Desc__c</fullName>
        <label>Finance Accounts Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Month_Pro_rated_Rent__c</fullName>
        <label>First Month Pro-rated Rent (to be delete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Formula_Description__c</fullName>
        <label>Formula Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>This is used to assign Billing Date on Rent Schedule based on Frequency
i.e. If Billing Frequency is &apos;Quarterly&apos; then system will assign same Billing Date on all 3 Rent Schedule records
Trigger is getting this value from AC - Field Name &apos;Rent Schedule Frequency&apos; (API - Frequency)</description>
        <inlineHelpText>This is used to assign Billing Date on Rent Schedule based on Frequency
i.e. If Billing Frequency is &apos;Quarterly&apos; then system will assign same Billing Date on all 3 Rent Schedule records</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTO_Cap__c</fullName>
        <description>Created to managed GTO Cap Cases. This value will be pushed to all related RS on reord creation. Will be referred in formulas to calculate GTO Amount (in respective RS records)</description>
        <label>GTO Cap</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GTO_Rate__c</fullName>
        <label>GTO Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Generate_Rent_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Rent Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Unit__c</fullName>
        <label>LOI Unit</label>
        <referenceTo>LOI_Unit__c</referenceTo>
        <relationshipName>LOI_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Month_Pro_rated_Balance__c</fullName>
        <label>Last Month Pro-rated Balance (to be dele</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Plan</label>
        <referenceTo>Lease_Plan__c</referenceTo>
        <relationshipLabel>LOI Charges</relationshipLabel>
        <relationshipName>LOI_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiple_Rental_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applicable for MEPE Cases: 
Please tick if you want to generate Rent Schedules for each Electric Meter record.
Un-tick will create 1 record for each month merging multiple meter(s) info.</inlineHelpText>
        <label>Multiple Rental Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_of_Parameter__c</fullName>
        <label>Multiple of Parameter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Area</fullName>
                </value>
                <value>
                    <fullName>Meter Units</fullName>
                </value>
                <value>
                    <fullName>Monthly Base Rent</fullName>
                </value>
                <value>
                    <fullName>Monthly GTO</fullName>
                </value>
                <value>
                    <fullName>Phone Units (Local)</fullName>
                </value>
                <value>
                    <fullName>Phone Units (Trunk)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Months__c</fullName>
        <inlineHelpText>Used for Total Amount Calculation which is later used to create Deposits</inlineHelpText>
        <label>No. of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Charge__r.Property_Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant_Name__c</fullName>
        <formula>LOI_Unit__r.LOI_Agreement_No__r.Tenant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1_Rate__c</fullName>
        <description>Please update % in decimal value in this field
e.g. For 10 Percent, add decimal: 0.10
e.g. For 5 Percent, add decimal: 0.05</description>
        <inlineHelpText>Please update % in decimal value in this field 
e.g. For 10 Percent, add decimal: 0.10 
e.g. For 5 Percent, add decimal: 0.05</inlineHelpText>
        <label>Tier 1 Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Upper_Limit__c</fullName>
        <label>Tier 1 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Rate__c</fullName>
        <inlineHelpText>Please update % in decimal value in this field 
e.g. For 10 Percent, add decimal: 0.10 
e.g. For 5 Percent, add decimal: 0.05</inlineHelpText>
        <label>Tier 2 Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Upper_Limit__c</fullName>
        <label>Tier 2 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Rate__c</fullName>
        <inlineHelpText>Please update % in decimal value in this field 
e.g. For 10 Percent, add decimal: 0.10 
e.g. For 5 Percent, add decimal: 0.05</inlineHelpText>
        <label>Tier 3 Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Upper_Limit__c</fullName>
        <label>Tier 3 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tiered_Limit1__c</fullName>
        <formula>Charge__r.Tiered_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Tiered Limit from related Applicable Charge</inlineHelpText>
        <label>Tiered Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiered_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Tier Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiered_Lower_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier Lower Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Different types of calculation for maintenance, A&amp;P</description>
        <inlineHelpText>Used in Amount Calculation
This Amount is later used in Deposits for LOI Cases.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Area</fullName>
                </value>
                <value>
                    <fullName>By Percent</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>GTO (Sum)</fullName>
                </value>
                <value>
                    <fullName>GTO (Higher)</fullName>
                </value>
                <value>
                    <fullName>Meter Units</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Area__c</fullName>
        <formula>LOI_Unit__r.Area_Sq_Ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Withholding Tax Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Rate__c</fullName>
        <label>Withholding Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>LOI Charge</label>
    <nameField>
        <label>LOI Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOI Charges</pluralLabel>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rent</fullName>
        <active>true</active>
        <label>Rent</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>